<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.FilterDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/pad"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/pad"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_filter_dialog">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.10" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.90" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/order_by_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/order_by_label"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/order_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/order_by"
                android:gravity="start"
                app:layout_constraintBottom_toBottomOf="@id/order_by_label"
                app:layout_constraintStart_toEndOf="@+id/order_by_label"
                app:layout_constraintTop_toTopOf="@id/order_by_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/type_label"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/order_by_label" />

            <include
                android:id="@+id/types_layout"
                layout="@layout/types"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/type_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/height_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="160dp"
                android:text="@string/height_label"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/types_layout" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/height_select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:haloColor="@color/color_green"
                app:layout_constraintBottom_toBottomOf="@id/height_label"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toEndOf="@id/barrier_label"
                app:layout_constraintTop_toTopOf="@id/height_label"
                app:thumbColor="@color/color_green_selected"
                app:trackColorActive="@color/color_green_selected"
                app:trackColorInactive="@color/color_green" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="160dp"
                android:text="@string/weight_label"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/height_label" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/weight_select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:haloColor="@color/color_green"
                app:layout_constraintBottom_toBottomOf="@id/weight_label"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toEndOf="@id/barrier_label"
                app:layout_constraintTop_toTopOf="@id/weight_label"
                app:thumbColor="@color/color_green_selected"
                app:trackColorActive="@color/color_green_selected"
                app:trackColorInactive="@color/color_green" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="weight_label,height_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weakness_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/weakness_label"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/weight_label" />

            <include
                android:id="@+id/weakness_layout"
                layout="@layout/types"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintTop_toBottomOf="@id/weakness_label" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@null"
                android:text="@string/clear_button"
                android:textColor="@color/color_blue"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/start_guideline"
                app:layout_constraintEnd_toStartOf="@id/cancel"
                app:layout_constraintTop_toBottomOf="@id/weakness_layout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@null"
                android:text="@string/cancel_button"
                android:textColor="@color/color_red"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/clear"
                app:layout_constraintEnd_toStartOf="@id/apply"
                app:layout_constraintTop_toBottomOf="@id/weakness_layout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:background="@drawable/type_checked"
                android:text="@string/apply_button"
                android:textColor="@color/color_green_not_selected"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintTop_toBottomOf="@id/weakness_layout" />

            <View
                android:layout_width="0dp"
                android:layout_height="28dp"
                app:layout_constraintTop_toBottomOf="@id/apply" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bulbasaur"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_bulbasaur" />
    </RelativeLayout>
</ScrollView>